# coco-app

./: .babelrc  .env  .gitignore  CONTRIBUTING.md  Makefile  README.md  RELEASE_PROCEDURE.md  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  test.md  tsconfig.json  tsconfig.node.tsbuildinfo  tsup.config.ts  vite.config.ts
.github/workflows/: enforce-no-dep-pizza-engine.yml  frontend-ci.yml  info-plist-check.yml  release.yml  rust_code_check.yml  rust_code_compile_check.yml
docs/: config.yaml
docs/content.en/: _index.md
example_extensions/demo/: package.json
example_extensions/list_desktop/: package-lock.json  package.json
example_extensions/list_desktop/src/: list_desktop.tsx  main.tsx
scripts/: buildWeb.ts  buildWebAfter.ts  check-info-plist.cjs
src/: error-page.tsx  index.d.ts  main.css  main.tsx  vite-env.d.ts  web.css
src-tauri/: Cargo.toml  Entitlements.Distribution.plist  Entitlements.plist  Info.plist  build.rs  rust-toolchain.toml  tauri.appstore.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/assets/extension/AIOverview/: plugin.json
src-tauri/assets/extension/Applications/: plugin.json
src-tauri/assets/extension/Calculator/: plugin.json
src-tauri/assets/extension/QuickAIAccess/: plugin.json
src-tauri/capabilities/: default.json  desktop.json  zustand.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  coco_server.rs  lib.rs  main.rs  permissions.rs  selection_monitor.rs  settings.rs  shortcut.rs
src-tauri/src/assistant/: mod.rs
src-tauri/src/common/: assistant.rs  connector.rs  datasource.rs  document copy.rs  document.rs  error.rs  http.rs  mod.rs  register.rs  search.rs  search_response.rs  server.rs  traits.rs
src-tauri/src/extension/: mod.rs  store.rs  third_party.rs  view_extension.rs  view_mode.rs
src-tauri/src/extension/api/: apis.toml  fs.rs  mod.rs
src-tauri/src/extension/built_in/: ai_overview.rs  calculator.rs  file_search.rs  mod.rs  open_camera.rs  pizza_engine_runtime.rs  quick_ai_access.rs
src-tauri/src/extension/built_in/application/: mod.rs  with_feature.rs  without_feature.rs
src-tauri/src/extension/built_in/file_search/: config.rs  mod.rs
src-tauri/src/extension/built_in/file_search/implementation/: linux_gnome.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/extension/built_in/file_search/implementation/linux/: gnome.rs  kde.rs  mod.rs
src-tauri/src/extension/built_in/file_search/implementation/windows/: mod.rs
src-tauri/src/extension/built_in/file_search/implementation/windows/crawl_scope_manager/: mod.rs  searchapi_h_bindings.rs
src-tauri/src/extension/built_in/window_management/: actions.rs  error.rs  mod.rs  on_opened.rs  plugin.json  search_source.rs  todo
src-tauri/src/extension/built_in/window_management/backend/: mod.rs
src-tauri/src/extension/coco_api/: fs.rs  mod.rs
src-tauri/src/local/: application.rs  calculator.rs  file_system.rs  mod.rs
src-tauri/src/local/application/: with_feature.rs
src-tauri/src/local/file_system/: mod.rs
src-tauri/src/macos/: permissions.rs
src-tauri/src/search/: mod.rs
src-tauri/src/server/: attachment.rs  auth.rs  connector.rs  datasource.rs  document.rs  http_client.rs  mod.rs  profile.rs  search.rs  servers.rs  synthesize.rs  transcription.rs  websocket.rs
src-tauri/src/setup/: linux.rs  mac.rs  mod.rs  windows.rs
src-tauri/src/util/: app_lang.rs  file.rs  http.rs  logging.rs  mod.rs  path.rs  platform.rs  system_lang.rs  updater.rs  version.rs
src/api/: attachment.ts  axiosRequest.ts  request.ts  streamFetch.ts  tauriFetchClient.ts  tools.ts  transcription.ts
src/commands/: servers.ts  system.ts  windowService.ts
src/components/: Footer.tsx  ThemeProvider.tsx
src/components/AppAI/: ApiDetails.tsx  DropdownList.tsx  Footer.tsx  InputBox.tsx  Search.tsx
src/components/Assistant/: AssistantFetcher.tsx  AssistantItem.tsx  AssistantList.tsx  AttachmentList.tsx  Chat copy.tsx  Chat.tsx  Chat1.tsx  ChatContent.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  ChatSidebar.tsx  ConnectPrompt.tsx  FileList.tsx  QueryIntent.tsx  ServerList.tsx  SessionFile.tsx  Sidebar.tsx  SourceResult.tsx  Splash.tsx  Synthesize.tsx  ThinkingSegment.tsx  ThinkingSteps.tsx  index.tsx  (+1 more)
src/constants/: index.ts
src/contexts/: ThemeContext.tsx
src/hooks/: serversDoc.md  useA.ts  useAutoResizeWindow.ts  useCanNavigateBack.ts  useChatActions.ts  useChatPanel.ts  useChatScroll.ts  useDeepLinkManager.ts  useEnabledServers.ts  useEscape.ts  useFeatureControl.ts  useFindConnectorIcon.ts  useIsMobile.ts  useKeyboardHandlers.ts  useKeyboardNavigation.ts  useMessageChunkData.ts  useMessageHandler.ts  useModifierKeyPress.ts  useRecording.ts  useScript.ts  useSearch.ts  useSelectionEnabled.ts  useSelectionPanel.ts  useSelectionSyncStore.ts  useSelectionWindow.ts  useServerList.ts  useServers.ts  useSettingsWindow.ts  useShortcutEditor.ts  useStreamAudio.ts  useStreamChat.ts  useSyncStore.ts  useTauriFocus.ts  useTogglePin.ts  useTray.ts  useViewExtensionUI.ts  useViewExtensionWindow.ts  useWeb.ts  useWebSocket.ts  useWindowEvents.ts  (+1 more)
src/icons/: AIInsightIcon.tsx  History.tsx  Pin.tsx  PinOff.tsx  PreviewIcon.tsx  Reading.tsx  Retrieve.tsx  SVGWrap.tsx  Selection.tsx  Server.tsx  Stop.tsx  Understand.tsx  WindowsFull.tsx
src/mock/: index.ts
src/reducers/: appReducer.ts
src/routes/: Header.tsx  index.tsx  layout.tsx  outlet.tsx  web.tsx
src/stores/: ConnectData.ts  appStore.ts  appearance.ts  appearanceStore.ts  applicationsStore.ts  authStore.ts  chatStore.ts  connectStore.ts  extension.ts  extensionStore.ts  extensionsStore.ts  searchStore.ts  selectionStore.ts  shortcutsStore.ts  startupStore.ts  updateStore.ts  webConfigStore.ts
src/types/: chat.ts  commands.ts  index.ts  platform.ts  search.ts  server.ts
src/utils/: console-custom.ts  date.ts  env.ts  global-logger.ts  iframe.ts  index.ts  keyboardUtils.ts  platform.ts  platformAdapter.ts  polyfills.ts  servers.ts  tauri.ts  tauriAdapter.ts  webAdapter.ts  webIntegrationUrl.ts
src/windows/: actions.ts  index.ts
(+242 files in other folders)
